--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/electrodomesticos.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/electrodomesticos.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Electrodomésticos</title>
-	<link rel="stylesheet" href="../../css/estilos.css">
+	<link rel="stylesheet" href="../css/estilos.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
 		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
@@ -22,18 +22,18 @@
 	<div class="overlay">
 		<a class="close">&times;</a>
 		<div class="overlay__content">
-			<a href="../templates/index.html">Inicio</a>
-			<a href="../templates/electrodomesticos.html">Electrodomésticos</a>
+			<a href="index.html">Inicio</a>
+			<a href="electrodomesticos.html">Electrodomésticos</a>
 			<a href="tecnicos.html">Técnicos</a>
-			<a href="../templates/nosotros.html">Nosotros</a>
+			<a href="nosotros.html">Nosotros</a>
 		</div>
 	</div>
-	<script type="text/javascript" src="../static/js/index.js"></script>
+	<script type="text/javascript" src="../js/index.js"></script>
 
 	<div class="container-items">
 		<div class="item">
 			<figure>
-				<img src="../static/img/lg.png" alt="producto" />
+				<img src="../img/lg.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Frigorífico LG </h2>
@@ -43,7 +43,7 @@
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../static/img/samsung.png" alt="producto" />
+				<img src="../img/samsung.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Frigorífico Samsung</h2>
@@ -53,7 +53,7 @@
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../static/img/lg2.png" alt="producto" />
+				<img src="../img/lg2.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Frigorífico LG</h2>
@@ -63,7 +63,7 @@
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../static/img/lavadoralg.png" alt="producto" />
+				<img src="../img/lavadoralg.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Lavadora LG 7kg</h2>
@@ -73,7 +73,7 @@
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../static/img/lavadoraBosch.png" alt="producto" />
+				<img src="../img/lavadoraBosch.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Lavadora Bosch 9kg</h2>
@@ -83,7 +83,7 @@
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../static/img/lavadoraSams.png" alt="producto" />
+				<img src="../img/lavadoraSams.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Lavadora LG 8kg</h2>
@@ -93,7 +93,7 @@
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../static/img/lavajlg.png" alt="producto" />
+				<img src="../img/lavajlg.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Lavavajillas LG</h2>
@@ -103,7 +103,7 @@
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../static/img/lavavajbos.png" alt="producto" />
+				<img src="../img/lavavajbos.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Lavavajillas Bosch</h2>
@@ -113,7 +113,7 @@
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../static/img/lavavajWhirl.png" alt="producto" />
+				<img src="../img/lavavajWhirl.png" alt="producto" />
 			</figure>
 			<div class="info-product">
 				<h2>Lavavajillas Whirlpool</h2>
