--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/fragmentos/footer.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/fragmentos/footer.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Inicio</title>
-	<link rel="stylesheet" href="../../css/estilos.css">
+	<link rel="stylesheet" href="../css/estilos.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
 		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
