--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
@@ -24,10 +24,10 @@
 		<a class="footer__logo" href="../index.html"><img src="img/ALKACEN.png" width="130px" alt="logo"></a>
 		<nav>
 			<ul class="nav__links">
-				<li><a href="../index.html" th:href="@{/index.html}">Inicio</a></li>
-				<li><a href="../electrodomesticos.html" th:href="@{/electrodomesticos.html}">Electrodomésticos</a></li>
-				<li><a href="../tecnicos.html" th:href="@{/tecnicos.html}">Técnicos</a></li>
-				<li><a href="../nosotros.html" th:href="@{/nosotros.html}">Nosotros</a></li>
+				<li><a href="index.html" th:href="@{index.html}">Inicio</a></li>
+				<li><a href="../electrodomesticos.html" th:href="@{/electrodomesticos}">Electrodomésticos</a></li>
+				<li><a href="../tecnicos.html" th:href="@{/tecnicos}">Técnicos</a></li>
+				<li><a href="../nosotros.html" th:href="@{/nosotros}">Nosotros</a></li>
 			</ul>
 		</nav>
 		<a class="cta" href="../../formulario-login.html">Iniciar Sesion</a>
