--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/index.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Inicio</title>
-	<link rel="stylesheet" href="../../css/estilos.css">
+	<link rel="stylesheet" href="../css/estilos.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
 		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
@@ -24,73 +24,81 @@
 	<div class="overlay">
 		<a class="close">&times;</a>
 		<div class="overlay__content">
-			<a href="../../index.html" th:href="@{/index.html}">Inicio</a>
-			<a href="..electrodomesticos.html" th:href="@{/electrodomesticos.html}">Electrodomésticos</a>
-			<a href="..tecnicos.html" th:href="@{/tecnicos.html}">Técnicos</a>
-			<a href="../../resources/nosotros.html" th:href="@{/nosotros.html}">Nosotros</a>
+			<a href="index.html" th:href="@{index.html}">Inicio</a>
+			<a href="electrodomesticos.html" th:href="@{electrodomesticos.html}">Electrodomésticos</a>
+			<a href="tecnicos.html" th:href="@{tecnicos.html}">Técnicos</a>
+			<a href="nosotros.html" th:href="@{nosotros.html}">Nosotros</a>
 		</div>
 	</div>
-	<script type="text/javascript" src="../../resources/static/js/index.js"></script>
+	<script type="text/javascript" src="../js/index.js"></script>
 
 	<div class="slider-frame">
 		<ul>
-			<li><img src="../static/img/lg.png" alt=""></li>
-			<li><img src="../../resources/static/img/lavadoralg.png" alt=""></li>
-			<li><img src="../../resources/static/img/samsung.png" alt=""></li>
-			<li><img src="../../resources/static/img/lavavajWhirl.png" alt=""></li>
+			<li><img src="../img/lg.png" alt=""></li>
+			<li><img src="../img/lavadoralg.png" alt=""></li>
+			<li><img src="../img/samsung.png" alt=""></li>
+			<li><img src="../img/lavavajWhirl.png" alt=""></li>
 		</ul>
 	</div>
 
 	<div class="container-items">
 		<div class="item">
 			<figure>
-				<img src="../../resources/static/img/lavadoraBosch.png" alt="producto" />
+				<img src="../img/lavadoraBosch.png" alt="producto" />
 			</figure>
 			<div class="info-product">
-				<h2>Zapatos Nike</h2>
-				<p class="price">$80</p>
+				<h2>Reparaciones</h2>
+				<p class="price">80€</p>
 				<button>Añadir al carrito</button>
 			</div>
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../../resources/static/img/lavadoralg.png" alt="producto" />
+				<img src="../img/lavadoralg.png" alt="producto" />
 			</figure>
 			<div class="info-product">
-				<h2>Audifonos</h2>
-				<p class="price">$20</p>
+				<h2>Novedades</h2>
+				<p class="price">20€</p>
 				<button>Añadir al carrito</button>
 			</div>
 		</div>
 		<div class="item">
 			<figure>
-				<img src="../../resources/static/img/lg.png" alt="producto" />
+				<img src="../img/lg.png" alt="producto" />
 			</figure>
 			<div class="info-product">
-				<h2>Reloj</h2>
-				<p class="price">$50</p>
+				<h2>Novedades</h2>
+				<p class="price">50€</p>
 				<button>Añadir al carrito</button>
 			</div>
 		</div>
 		<div class="item">
 			<figure>
-				<img src="https://images.unsplash.com/photo-1546868871-7041f2a55e12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
-					alt="producto" />
+				<img src="../img/lg2.png" alt="producto" />
 			</figure>
 			<div class="info-product">
-				<h2>Smartwatch</h2>
-				<p class="price">$90</p>
+				<h2>Plan Renove</h2>
+				<p class="price">90€</p>
 				<button>Añadir al carrito</button>
 			</div>
 		</div>
 		<div class="item">
 			<figure>
-				<img src="https://images.unsplash.com/photo-1585386959984-a4155224a1ad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80"
-					alt="producto" />
+				<img src="../img/lavadoraBosch.png" alt="producto" />
 			</figure>
 			<div class="info-product">
-				<h2>Perfume</h2>
-				<p class="price">$50</p>
+				<h2>Consumo energético</h2>
+				<p class="price">63€</p>
+				<button>Añadir al carrito</button>
+			</div>
+		</div>
+		<div class="item">
+			<figure>
+				<img src="../img/lavadoraBosch.png" alt="producto" />
+			</figure>
+			<div class="info-product">
+				<h2>Consumo energético</h2>
+				<p class="price">63€</p>
 				<button>Añadir al carrito</button>
 			</div>
 		</div>
