--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/fragmentos/footer.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/fragmentos/footer.html
@@ -37,9 +37,9 @@
 			<div class="footer__contact">
 				<h3>Contacto</h3><br>
 				<ul>
-					<li><i class="fas fa-map-marker-alt"></i> Dirección: Calle 1234, Ciudad, País</li>
+					<li><i class="fas fa-map-marker-alt"></i> Dirección: Calle Condes de Bustillo, Sevilla, España</li>
 					<li><i class="fas fa-envelope"></i> Email: info@alkacen.com</li>
-					<li><i class="fas fa-phone"></i> Teléfono: +1 234 567 8901</li>
+					<li><i class="fas fa-phone"></i> Teléfono: +34 954 256 871</li>
 				</ul>
 			</div>
 			<div class="footer__social">
