--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Inicio</title>
-	<link rel="stylesheet" href="../css/estilos.css">
+	<link rel="stylesheet" href="../css/estilos.css" th:href="@{/css/style.css}">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
 		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
@@ -21,7 +21,7 @@
 <body>
 
 	<header th:fragment="encabezado">
-		<a class="footer__logo" href="../index.html"><img src="img/ALKACEN.png" width="130px" alt="logo"></a>
+		<a class="footer__logo" href="../index.html" th:href="@{/index}"><img src="img/ALKACEN.png" width="130px" alt="logo"></a>
 		<nav>
 			<ul class="nav__links">
 				<li><a href="index.html" th:href="@{index.html}">Inicio</a></li>
@@ -42,7 +42,7 @@
 			<a href="../nosotros.html">Nosotros</a>
 		</div>
 	</div>
-	<script type="text/javascript" src="../../static/css/estilos.css"></script>
+	<script type="text/javascript" src="../js/index	.css"></script>
 </body>
 
 </html>
