--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/index.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Inicio</title>
-	<link rel="stylesheet" href="../css/estilos.css">
+	<link rel="stylesheet" href="/css/estilos.css" th:href="@{/css/estilos.css}">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
 		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
@@ -15,7 +15,8 @@
 		integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
 		crossorigin="anonymous"></script>
 	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
@@ -24,13 +25,26 @@
 	<div class="overlay">
 		<a class="close">&times;</a>
 		<div class="overlay__content">
-			<a href="index.html" th:href="@{index.html}">Inicio</a>
-			<a href="electrodomesticos.html" th:href="@{electrodomesticos.html}">Electrodomésticos</a>
-			<a href="tecnicos.html" th:href="@{tecnicos.html}">Técnicos</a>
-			<a href="nosotros.html" th:href="@{nosotros.html}">Nosotros</a>
+			<a href="/" th:href="@{/index.html}">Inicio</a>
+			<a href="electrodomesticos.html" th:href="@{/electrodomesticos.html}">Electrodomésticos</a>
+			<a href="tecnicos.html" th:href="@{/tecnicos.html}">Técnicos</a>
+			<a href="nosotros.html" th:href="@{/nosotros.html}">Nosotros</a>
 		</div>
 	</div>
 	<script type="text/javascript" src="../js/index.js"></script>
+
+	<nav class="navbar navbar-expand-sm bg-light">
+		<div class="container-fluid">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="admin/listado-categoria.html" th:href="@{admin/categoria/}">Frigoríficos</a>
+				</li>
+				<li class="nav-item"><a class="nav-link" href="#">Lavadoras</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Hornos</a></li>
+			</ul>
+		</div>
+	</nav>
+
 
 	<div class="slider-frame">
 		<ul>
