--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/admin/formulario-producto.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/admin/formulario-producto.html
@@ -3,9 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Lista Categoría</title>
+	<title>Formulario Producto</title>
 	<link rel="stylesheet" href="../../css/estilos.css" th:href="@{/css/estilos.css}">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
@@ -16,6 +14,11 @@
 		crossorigin="anonymous"></script>
 	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
+
+<header>
+	<a class="footer__logo" href="index.html"><img src="../../static/img/ALKACEN.png" width="130px" alt="logo"></a>
+	<a class="cta" href="#">Iniciar Sesion</a>
+</header>
 
 <body>
 	<header th:replace="~{fragmentos/encabezado::encabezado}"></header>
@@ -28,7 +31,7 @@
 			<a href="nosotros.html">Nosotros</a>
 		</div>
 	</div>
-	<script type="text/javascript" src="../../js/index.js"></script>
+	<script type="text/javascript" src="../js/index.js"></script>
 
 	<nav class="navbar navbar-expand-sm bg-light">
 		<div class="container-fluid">
@@ -56,64 +59,54 @@
 		</div>
 	</nav>
 
-	<div class="container-items">
-		<div class="item">
-			<figure>
-				<img src="../../img/lg.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Frigoríficos</h2>
-				<button>Editar</button>
+	<form class="login__form" action="" method="post">
+		<div class="container__login">
+			<div class="login__form-group">
+				<label for="username">Nombre:</label>
+				<input type="text" id="first-name" name="first-name" required>
+			</div>
+			<div class="footer__form-group">
+				<label for="password">URL imagen:</label>
+				<input type="password" id="last-name" name="last-name" required>
+			</div>
+			<div class="login__form-group">
+				<button type="submit">Guardar</button><br><br><br><br><br><br><br><br><br><br><br><br>
 			</div>
 		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/samsung.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavadoras</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../mg/lg2.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Hornos</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../img/../lavadoralg.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Hornos</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/lavadoraBosch.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavadoras</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/lavadoraSams.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavavajillas</h2>
-				<button>Añadir al carrito</button>
-			</div>
-		</div>
-	</div>
-	<footer th:replace="~{fragmentos/footer::footer}"></footer>
+	</form>
 
+	<footer>
+		<div class="container">
+			<div class="footer__logo">
+				<img src="../static/img/ALKACEN.png alt=" logo" width="150px">
+			</div>
+			<div class="footer__links">
+				<h3>Enlaces</h3><br>
+				<ul>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="electrodomesticos.html">Electrodomésticos</a></li>
+					<li><a href="tecnicos.html">Técnicos</a></li>
+					<li><a href="nosotros.html">Nosotros</a></li>
+				</ul>
+			</div>
+			<div class="footer__contact">
+				<h3>Contacto</h3><br>
+				<ul>
+					<li><i class="fas fa-map-marker-alt"></i> Dirección: Calle 1234, Ciudad, País</li>
+					<li><i class="fas fa-envelope"></i> Email: info@alkacen.com</li>
+					<li><i class="fas fa-phone"></i> Teléfono: +1 234 567 8901</li>
+				</ul>
+			</div>
+			<div class="footer__social">
+				<h3>Síguenos</h3><br>
+				<ul>
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+				</ul>
+			</div>
+		</div>
+	</footer>
 
 </body>
 
