--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/admin/listado-producto.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/admin/listado-producto.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Lista Categoría</title>
+	<title>Lista Productos</title>
 	<link rel="stylesheet" href="../../css/estilos.css" th:href="@{/css/estilos.css}">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
@@ -15,6 +15,7 @@
 		integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
 		crossorigin="anonymous"></script>
 	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -23,36 +24,44 @@
 		<a class="close">&times;</a>
 		<div class="overlay__content">
 			<a href="index.html">Inicio</a>
-			<a href="electrodomesticos.html">Electrodomésticos</a>
 			<a href="tecnicos.html">Técnicos</a>
 			<a href="nosotros.html">Nosotros</a>
 		</div>
 	</div>
 	<script type="text/javascript" src="../../js/index.js"></script>
 
-	<nav class="navbar navbar-expand-sm bg-light">
+	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="admin/listado-categoria.html"
-						th:href="@{admin/categoria/}">Frigoríficos</a>
-				</li>
-				<li class="nav-item"><a class="nav-link" href="#">Lavadoras</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Hornos</a></li>
-			</ul>
-		</div>
-
-		<div id="navbar" class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-						aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="/admin/categoria/" th:href="@{/admin/categoria/}">Gestión de categorías</a>
-						</li>
-						<li><a href="/admin/producto/" th:href="@{/admin/producto/}">Gestión de productos</a></li>
-					</ul>
-				</li>
-			</ul>
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">0</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#"></a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+							aria-expanded="false">
+							Dropdown link
+						</a>
+						<ul class="dropdown-menu-right">
+							<li><a class="dropdown-item" href="admin/listado-categoria.html"
+									th:href="@{/admin/categoria/}">Gestión categorías</a></li>
+							<li><a class="dropdown-item" href="admin/listado-productos.html"
+									th:href="@{/admin/producto/}">Gestión productos</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 
@@ -108,7 +117,7 @@
 			</figure>
 			<div class="info-product">
 				<h2>Lavavajillas</h2>
-				<button>Añadir al carrito</button>
+				<button>Editar</button>
 			</div>
 		</div>
 	</div>
