--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/detalles.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/detalles.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Lista Categoría</title>
+	<title>Lista Productos</title>
 	<link rel="stylesheet" href="../../css/estilos.css" th:href="@{/css/estilos.css}">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
@@ -23,7 +23,6 @@
 		<a class="close">&times;</a>
 		<div class="overlay__content">
 			<a href="index.html">Inicio</a>
-			<a href="electrodomesticos.html">Electrodomésticos</a>
 			<a href="tecnicos.html">Técnicos</a>
 			<a href="nosotros.html">Nosotros</a>
 		</div>
@@ -35,8 +34,7 @@
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link" href="admin/listado-categoria.html"
-						th:href="@{admin/categoria/}">Frigoríficos</a>
-				</li>
+						th:href="@{admin/categoria/}">Frigoríficos</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Lavadoras</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Hornos</a></li>
 			</ul>
@@ -64,51 +62,6 @@
 			<div class="info-product">
 				<h2>Frigoríficos</h2>
 				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/samsung.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavadoras</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../mg/lg2.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Hornos</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../img/../lavadoralg.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Hornos</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/lavadoraBosch.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavadoras</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/lavadoraSams.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavavajillas</h2>
-				<button>Añadir al carrito</button>
 			</div>
 		</div>
 	</div>
