--- a/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/index.html
+++ b/HTML/WorkSpace Spring/ProyectoFinal/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
+
 </head>
 
 <body>
@@ -25,23 +26,68 @@
 	<div class="overlay">
 		<a class="close">&times;</a>
 		<div class="overlay__content">
-			<a href="/" th:href="@{/index.html}">Inicio</a>
-			<a href="electrodomesticos.html" th:href="@{/electrodomesticos.html}">Electrodomésticos</a>
+			<a href="/index.html" th:href="@{/index.html}">Inicio</a>
 			<a href="tecnicos.html" th:href="@{/tecnicos.html}">Técnicos</a>
 			<a href="nosotros.html" th:href="@{/nosotros.html}">Nosotros</a>
 		</div>
 	</div>
 	<script type="text/javascript" src="../js/index.js"></script>
 
-	<nav class="navbar navbar-expand-sm bg-light">
+	<!--<nav class="navbar navbar-expand-sm bg-light">
 		<div class="container-fluid">
 			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="admin/listado-categoria.html" th:href="@{admin/categoria/}">Frigoríficos</a>
-				</li>
-				<li class="nav-item"><a class="nav-link" href="#">Lavadoras</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Hornos</a></li>
+				<li th:each="categoria : ${categorias}"><a href="#" th:href="@{/?(idCategoria=${categoria.id})}"
+						th:text="${categoria.nombre}">categoría</a></li>
 			</ul>
+		</div>
+
+		<div id="navbar" class="navbar-collapse collapse">
+			<ul class="nav navbar-nav navbar-right">
+				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+						aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="/admin/categoria/" th:href="@{/admin/categoria/}">Gestión de categorías</a></li>
+						<li><a href="/admin/producto/" th:href="@{/admin/producto/}">Gestión de productos</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</nav>-->
+
+	<nav class="navbar navbar-expand-lg bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">Categorías</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<ul class="navbar-nav">
+						<li th:each="categoria : ${categorias}"><a href="#" th:href="@{/?(idCategoria=${categoria.id})}"
+								th:text="${categoria.nombre}">categoría</a></li>
+					</ul>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#"></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#"></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#"></a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+							aria-expanded="false">Opciones</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="admin/listado-categoria.html"
+									th:href="@{/admin/categoria/}">Gestión categorías</a></li>
+							<li><a class="dropdown-item" href="admin/listado-productos.html"
+									th:href="@{/admin/producto/}">Gestión productos</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 
@@ -56,17 +102,31 @@
 	</div>
 
 	<div class="container-items">
-		<div class="item">
-			<figure>
-				<img src="../img/lavadoraBosch.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Reparaciones</h2>
-				<p class="price">80€</p>
-				<button>Añadir al carrito</button>
-			</div>
+		<div class="item" th:each="producto : ${productos}">
+			<a href="#" th:href="@{/product/{id}(id=${producto.id})}">
+
+				<figure>
+					<!--	<img src="../img/lavadoraBosch.png" alt="producto" />-->
+					<div class="photo">
+						<img src="http://placehold.it/350x260"
+							th:src="${#strings.isEmpty(producto.imagen)} ? 'http://placehold.it/350x260' : ${producto.imagen}"
+							class="img-responsive" alt="a" />
+				</figure>
+				<div class="info-product">
+					<h2 th:text="${#strings.abbreviate(producto.nombre,65)}">Nombre</h2>
+					<span
+						th:text="${producto.descuento == 0} ? ${#numbers.formatCurrency(producto.pvp)} : ${#numbers.formatCurrency(producto.pvp * (1 - producto.descuento))}">10</span>
+
+					<th:block th:if="${producto.descuento > 0}">
+						<span class="price-original" th:text="${#numbers.formatCurrency(producto.pvp)}"></span>
+						<span class="label label-danger"
+							th:text=${#numbers.formatPercent(producto.descuento,1,0)}></span>
+					</th:block>
+					<!--<p class="price">80€</p>-->
+					<!--<button>Añadir al carrito</button>-->
+				</div>
 		</div>
-		<div class="item">
+		<!--<div class="item">
 			<figure>
 				<img src="../img/lavadoralg.png" alt="producto" />
 			</figure>
@@ -115,7 +175,7 @@
 				<p class="price">63€</p>
 				<button>Añadir al carrito</button>
 			</div>
-		</div>
+		</div>-->
 	</div>
 	<footer th:replace="~{fragmentos/footer::footer}"></footer>
 
