--- a/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
+++ b/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
@@ -21,23 +21,23 @@
 <body>
 
 	<header th:fragment="encabezado">
-		<a class="footer__logo" href="../index.html" th:href="@{/index}"><img src="img/ALKACEN.png" width="130px" alt="logo"></a>
+		<a class="footer__logo" href="index.html" th:href="@{/index}"><img src="img/ALKACEN.png" width="130px" alt="logo"></a>
 		<nav>
 			<ul class="nav__links">
-				<li><a href="index.html" th:href="@{index.html}">Inicio</a></li>
-				<li><a href="../tecnicos.html" th:href="@{/tecnicos}">Técnicos</a></li>
-				<li><a href="../nosotros.html" th:href="@{/nosotros}">Nosotros</a></li>
+				<li><a href="index.html" th:href="@{/index}">Inicio</a></li>
+				<li><a href="tecnicos.html" th:href="@{/tecnicos}">Técnicos</a></li>
+				<li><a href="nosotros.html" th:href="@{/nosotros}">Nosotros</a></li>
 			</ul>
 		</nav>
-		<a class="cta" href="../../formulario-login.html">Iniciar Sesion</a>
+		<a class="cta" href="formulario-login.html" th:href="@{/formulario-login}" >Iniciar Sesion</a>
 		<p class="menu cta">Menu</p>
 	</header>
 	<div class="overlay">
 		<a class="close">&times;</a>
 		<div class="overlay__content">
-			<a href="../index.html">Inicio</a>
-			<a href="../tecnicos.html">Técnicos</a>
-			<a href="../nosotros.html">Nosotros</a>
+			<a href="index.html" th:href="{/index}">Inicio</a>
+			<a href="tecnicos.html" th:href="{/tecnicos}" >Técnicos</a>
+			<a href="nosotros.html" th:href="{/nosotros}">Nosotros</a>
 		</div>
 	</div>
 	<script type="text/javascript" src="../js/index	.css"></script>
