--- a/ProyectoFinal/src/main/resources/templates/index.html
+++ b/ProyectoFinal/src/main/resources/templates/index.html
@@ -26,9 +26,9 @@
 	<div class="overlay">
 		<a class="close">&times;</a>
 		<div class="overlay__content">
-			<a href="/index.html" th:href="@{/index.html}">Inicio</a>
-			<a href="tecnicos.html" th:href="@{/tecnicos.html}">Técnicos</a>
-			<a href="nosotros.html" th:href="@{/nosotros.html}">Nosotros</a>
+			<a href="index.html" th:href="@{/index}">Inicio</a>
+			<a href="tecnicos.html" th:href="@{/tecnicos}">Técnicos</a>
+			<a href="nosotros.html" th:href="@{/nosotros}">Nosotros</a>
 		</div>
 	</div>
 	<script type="text/javascript" src="../js/index.js"></script>
