--- a/ProyectoFinal/src/main/resources/templates/admin/formulario-producto.html
+++ b/ProyectoFinal/src/main/resources/templates/admin/formulario-producto.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Formulario Producto</title>
-	<link rel="stylesheet" href="../../css/estilos.css" th:href="@{/css/estilos.css}">
+	<link rel="stylesheet" href="../../static/css/estilos.css" th:href="@{/css/estilos.css}">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
 		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
@@ -22,91 +22,86 @@
 
 <body>
 	<header th:replace="~{fragmentos/encabezado::encabezado}"></header>
-	<div class="overlay">
-		<a class="close">&times;</a>
-		<div class="overlay__content">
-			<a href="index.html">Inicio</a>
-			<a href="electrodomesticos.html">Electrodomésticos</a>
-			<a href="tecnicos.html">Técnicos</a>
-			<a href="nosotros.html">Nosotros</a>
-		</div>
-	</div>
-	<script type="text/javascript" src="../js/index.js"></script>
 
-	<nav class="navbar navbar-expand-sm bg-light">
+	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="admin/listado-categoria.html"
-						th:href="@{admin/categoria/}">Frigoríficos</a>
-				</li>
-				<li class="nav-item"><a class="nav-link" href="#">Lavadoras</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Hornos</a></li>
-			</ul>
-		</div>
-
-		<div id="navbar" class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-						aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="/admin/categoria/" th:href="@{/admin/categoria/}">Gestión de categorías</a>
-						</li>
-						<li><a href="/admin/producto/" th:href="@{/admin/producto/}">Gestión de productos</a></li>
-					</ul>
-				</li>
-			</ul>
+			<a class="navbar-brand" href="#"></a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="">Categoría</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+							aria-expanded="false">Opciones
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="/admin/categoria/"
+									th:href="@{/admin/categoria}">Gestionar categoría</a></li>
+							<li><a class="dropdown-item" href="/admin/producto/" th:href="@{/admin/producto}">Gestionar
+									producto</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 
 	<form class="login__form" action="" method="post">
 		<div class="container__login">
-			<div class="login__form-group">
-				<label for="username">Nombre:</label>
-				<input type="text" id="first-name" name="first-name" required>
-			</div>
-			<div class="footer__form-group">
-				<label for="password">URL imagen:</label>
-				<input type="password" id="last-name" name="last-name" required>
-			</div>
-			<div class="login__form-group">
-				<button type="submit">Guardar</button><br><br><br><br><br><br><br><br><br><br><br><br>
-			</div>
+			<form method="post" action="#" th:action="@{/admin/producto/nuevo/submit}" th:object="${producto}">
+				<h1>
+					<span th:text="${producto.id} ? 'Editar' : 'Nuevo'"></span>
+					producto
+				</h1>
+				<input type="hidden" th:field="*{id}" id="id" />
+				<div class="login__form-group">
+					<label for="username">Nombre:</label>
+					<input type="text" id="nombre" placeholder="Nombre" th:field="*{nombre}" required>
+				</div>
+				<div class="login__form-group">
+					<label for="username">Descripción:</label>
+					<input type="url" id="imagen" placeholder="http://..." th:field="*{imgen}">
+
+				</div>
+				<div class="login__form-group">
+					<label for="number">Precio:</label>
+					<input type="text" id="pvp" placeholder="1.0" th:field="*{pvp}">
+				</div>
+				<div class="login__form-group">
+					<label for="username">Descuento:</label>
+					<input type="number" min="0" max="1" step="0.01" id="descuento" placeholder="0.0"
+						th:field="*{descuento}">
+				</div>
+				<div class="footer__form-group">
+					<label for="password">URL imagen:</label>
+					<input type="password" id="last-name" name="last-name" required>
+				</div>
+
+				<div class="form-group">
+					<label for="categoria">Categoría</label> <select th:field="*{categoria}" class="form-control">
+						<option value="-1">---</option>
+						<option th:each="categoria : ${categorias}" th:value="${categoria.id}"
+							th:text="${categoria.nombre}">Categoría</option>
+					</select>
+				</div>
+
+
+				<div class="login__form-group">
+					<button type="submit">Guardar</button>
+				</div>
+			</form>
 		</div>
 	</form>
 
-	<footer>
-		<div class="container">
-			<div class="footer__logo">
-				<img src="../static/img/ALKACEN.png alt=" logo" width="150px">
-			</div>
-			<div class="footer__links">
-				<h3>Enlaces</h3><br>
-				<ul>
-					<li><a href="index.html">Inicio</a></li>
-					<li><a href="electrodomesticos.html">Electrodomésticos</a></li>
-					<li><a href="tecnicos.html">Técnicos</a></li>
-					<li><a href="nosotros.html">Nosotros</a></li>
-				</ul>
-			</div>
-			<div class="footer__contact">
-				<h3>Contacto</h3><br>
-				<ul>
-					<li><i class="fas fa-map-marker-alt"></i> Dirección: Calle 1234, Ciudad, País</li>
-					<li><i class="fas fa-envelope"></i> Email: info@alkacen.com</li>
-					<li><i class="fas fa-phone"></i> Teléfono: +1 234 567 8901</li>
-				</ul>
-			</div>
-			<div class="footer__social">
-				<h3>Síguenos</h3><br>
-				<ul>
-					<a href="#"><i class="fab fa-facebook-f"></i></a>
-					<a href="#"><i class="fab fa-twitter"></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></a>
-				</ul>
-			</div>
-		</div>
-	</footer>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
 
 </body>
 
