--- a/ProyectoFinal/src/main/resources/templates/admin/listado-categoria.html
+++ b/ProyectoFinal/src/main/resources/templates/admin/listado-categoria.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Lista Categoría</title>
+	<link rel="stylesheet" href="../static/css/estilos.css" th:href="@{/css/estilos.css}">
+
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
 		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
@@ -63,7 +65,8 @@
 					<span>¡No se puede borrar una categoría que tiene asociados productos!</span>
 				</div>
 				<div class="pull-right">
-					<a href="formulario-categoria.html" th:href="@{/admin/categoria/nueva/}" class="btn btn-primary">Nueva
+					<a href="formulario-categoria.html" th:href="@{/admin/categoria/nueva/}"
+						class="btn btn-primary">Nueva
 						categoría</a>
 
 				</div>
@@ -78,10 +81,9 @@
 					<tbody>
 						<tr th:each="categoria : ${categorias}">
 							<td><img th:src="${not (#strings.isEmpty(categoria.imagen))} ? ${categoria.imagen} : 'http://placehold.it/48x48'"
-									class="img-responsive icono-categoria" alt="imagen" /></td>
+							class="img-responsive icono-categoria" alt="imagen" /></td>
 							<td th:text="${categoria.nombre}"></td>
-							<td class="operaciones"><a href="#"
-									th:href="@{/admin/categoria/editar/{id}(id=${categoria.id})}"
+							<td class="operaciones"><a href="#" th:href="@{/admin/categoria/editar/{id}(id=${categoria.id})}"
 									class="btn btn-primary">Editar</a>
 								<button type="button" class="btn btn-danger" data-toggle="modal"
 									data-target="#delete-modal" th:data-id="${categoria.id}">Borrar</button>
@@ -111,12 +113,16 @@
 
 		</div>
 	</div>
-	<footer th:replace="~{fragmentos/footer::footer}"></footer>
-	
-	<script src="../static/js/index2.js" th:src="@{/js/index2.js}"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="../../static/js/index2.js" th:src="@{/js/index2.js}"></script>
 
-	
-	
+
+
+
+
+
+
 
 
 </body>
