--- a/ProyectoFinal/src/main/resources/templates/admin/listado-producto.html
+++ b/ProyectoFinal/src/main/resources/templates/admin/listado-producto.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Lista Productos</title>
-	<link rel="stylesheet" href="../../css/estilos.css" th:href="@{/css/estilos.css}">
+	<link rel="stylesheet" href="../../static/css/estilos.css" th:href="@{/css/estilos.css}">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
 		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
@@ -15,24 +15,15 @@
 		integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
 		crossorigin="anonymous"></script>
 	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-	<header th:replace="~{fragmentos/encabezado::encabezado}"></header>
-	<div class="overlay">
-		<a class="close">&times;</a>
-		<div class="overlay__content">
-			<a href="index.html">Inicio</a>
-			<a href="tecnicos.html">Técnicos</a>
-			<a href="nosotros.html">Nosotros</a>
-		</div>
-	</div>
-	<script type="text/javascript" src="../../js/index.js"></script>
 
 	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="navbar-brand" href="#"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
 				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -40,24 +31,23 @@
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link active" aria-current="page" href="">Categorias</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">0</a>
+						<a class="nav-link" href="#"></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#"></a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">
-							Dropdown link
+							aria-expanded="false">Opciones
 						</a>
-						<ul class="dropdown-menu-right">
-							<li><a class="dropdown-item" href="admin/listado-categoria.html"
-									th:href="@{/admin/categoria/}">Gestión categorías</a></li>
-							<li><a class="dropdown-item" href="admin/listado-productos.html"
-									th:href="@{/admin/producto/}">Gestión productos</a></li>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="/admin/categoria/"
+									th:href="@{/admin/categoria}">Gestionar categoría</a></li>
+							<li><a class="dropdown-item" href="/admin/producto/" th:href="@{/admin/producto}">Gestionar
+									producto</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -67,61 +57,59 @@
 
 	<div class="container-items">
 		<div class="item">
-			<figure>
-				<img src="../../img/lg.png" alt="producto" />
-			</figure>
+
 			<div class="info-product">
-				<h2>Frigoríficos</h2>
-				<button>Editar</button>
+				<a href="formulario-producto.html" th:href="@{/admin/producto/nuevo/}" class="btn btn-primary">Nuevo producto</a>
 			</div>
 		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/samsung.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavadoras</h2>
-				<button>Editar</button>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Imagen</th>
+					<th>Nombre</th>
+					<th>Pvp</th>
+					<th>Operaciones</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="producto : ${productos}">
+					<td><img th:src="${not (#strings.isEmpty(producto.imagen))} ? ${producto.imagen} : 'http://placehold.it/48x48'"
+							class="img-responsive icono-categoria" alt="imagen" /></td>
+					<td th:text="${producto.nombre}"></td>
+					<td th:text="${#numbers.formatCurrency(producto.pvp)}"></td>
+					<td class="operaciones"><a href="#" th:href="@{/admin/producto/editar/{id}(id=${producto.id})}"
+							class="btn btn-dark">Editar</a>
+						<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#delete-modal"
+							th:data-id="${producto.id}">Borrar</button>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+	<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title">Borrar producto</h4>
+				</div>
+				<div class="modal-body">
+					<p>¿Está usted seguro de borrar este producto?</p>
+					<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+					<a href="/admin/producto/borrar/" class="btn btn-danger">Sí</a>
+				</div>
 			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../mg/lg2.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Hornos</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../img/../lavadoralg.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Hornos</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/lavadoraBosch.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavadoras</h2>
-				<button>Editar</button>
-			</div>
-		</div>
-		<div class="item">
-			<figure>
-				<img src="../../img/lavadoraSams.png" alt="producto" />
-			</figure>
-			<div class="info-product">
-				<h2>Lavavajillas</h2>
-				<button>Editar</button>
-			</div>
+
 		</div>
 	</div>
-	<footer th:replace="~{fragmentos/footer::footer}"></footer>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="../static/js/index2.js" th:src="@{/js/index2.js}"></script>
+
+
 
 
 </body>
