--- a/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
+++ b/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
@@ -40,7 +40,7 @@
 			<a href="nosotros.html" th:href="{/nosotros}">Nosotros</a>
 		</div>
 	</div>
-	<script type="text/javascript" src="../js/index	.css"></script>
+	<script type="text/javascript" src="../static/js/index.css"></script>
 </body>
 
 </html>
