--- a/ProyectoFinal/src/main/resources/templates/index.html
+++ b/ProyectoFinal/src/main/resources/templates/index.html
@@ -14,24 +14,22 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js"
 		integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
 		crossorigin="anonymous"></script>
-	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
 
 </head>
 
 <body>
 	<header th:replace="~{fragmentos/encabezado::encabezado}"></header>
-	<div class="overlay">
+	<!--<div class="overlay">
 		<a class="close">&times;</a>
 		<div class="overlay__content">
-			<a href="index.html" th:href="@{/index}">Inicio</a>
-			<a href="tecnicos.html" th:href="@{/tecnicos}">Técnicos</a>
-			<a href="nosotros.html" th:href="@{/nosotros}">Nosotros</a>
+			<a href="index.html" target="_blank" th:href="@{/index}">Inicio</a>
+			<a href="tecnicos.html" target="_blank" th:href="@{/tecnicos}">Técnicos</a>
+			<a href="nosotros.html" target="_blank" th:href="@{/nosotros}">Nosotros</a>
 		</div>
 	</div>
-	<script type="text/javascript" src="../js/index.js"></script>
+	<script type="text/javascript" src="../js/index.js"></script>-->
 
 	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
@@ -48,13 +46,6 @@
 					</ul>
 					<li class="nav-item">
 						<a class="nav-link active" aria-current="page" href="#"></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"></a>
-					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
 							aria-expanded="false">Opciones</a>
@@ -70,7 +61,6 @@
 		</div>
 	</nav>
 
-
 	<div class="slider-frame">
 		<ul>
 			<li><img src="../img/lg.png" alt=""></li>
@@ -80,12 +70,12 @@
 		</ul>
 	</div>
 
+
 	<div class="container-items">
 		<div class="item" th:each="producto : ${productos}">
 			<a href="#" th:href="@{/product/{id}(id=${producto.id})}">
 
 				<figure>
-					<!--	<img src="../img/lavadoraBosch.png" alt="producto" />-->
 					<div class="photo">
 						<img src="http://placehold.it/350x260"
 							th:src="${#strings.isEmpty(producto.imagen)} ? 'http://placehold.it/350x260' : ${producto.imagen}"
@@ -104,6 +94,8 @@
 				</div>
 		</div>
 	</div>
+
+
 	<footer th:replace="~{fragmentos/footer::footer}"></footer>
 
 
