Todo antes de meter seguridad

--- a/ProyectoFinal/src/main/resources/templates/admin/listado-producto.html
+++ b/ProyectoFinal/src/main/resources/templates/admin/listado-producto.html
@@ -21,6 +21,7 @@
 
 <body>
 
+
 	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"></a>
@@ -30,36 +31,32 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
+					<li th:each="categoria : ${categorias}"><a href="#" th:href="@{/?(idCategoria=${categoria.id})}"
+							th:text="${categoria.nombre}">categoría</a></li>
+
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="">Categorias</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"></a>
-					</li>
+						<a class="nav-link active" aria-current="page" href="#"></a>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">Opciones
-						</a>
+							aria-expanded="false">Opciones</a>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="/admin/categoria/"
-									th:href="@{/admin/categoria}">Gestionar categoría</a></li>
-							<li><a class="dropdown-item" href="/admin/producto/" th:href="@{/admin/producto}">Gestionar
-									producto</a></li>
+							<li><a class="dropdown-item" href="admin/categoria/" th:href="@{/admin/categoria/}">Gestión
+									categorías</a></li>
+							<li><a class="dropdown-item" href="admin/producto/" th:href="@{/admin/producto/}">Gestión
+									productos</a></li>
 						</ul>
+					</li>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-
-	<div class="container-items">
+	<div class="container">
 		<div class="item">
 
 			<div class="info-product">
-				<a href="formulario-producto.html" th:href="@{/admin/producto/nuevo/}" class="btn btn-primary">Nuevo producto</a>
+				<a href="formulario-producto.html" th:href="@{/admin/producto/nuevo/}" class="btn btn-primary">Nuevo
+					producto</a>
 			</div>
 		</div>
 		<table class="table">
