--- a/ProyectoFinal/src/main/resources/static/css/estilos.css
+++ b/ProyectoFinal/src/main/resources/static/css/estilos.css
@@ -118,7 +118,7 @@ footer {
 	font-family: "Montserrat", sans-serif;
 }
 
-.container {
+.container_footer {
 	max-width: 1200px;
 	margin: 0 auto;
 	display: flex;
@@ -175,110 +175,6 @@ footer {
 	margin-right: 10px;
 }
 
-.icon-cart {
-	width: 40px;
-	height: 40px;
-	stroke: #000;
-}
-
-.icon-cart:hover {
-	cursor: pointer;
-}
-
-.count-products {
-	position: absolute;
-	top: 55%;
-	right: 0;
-
-	background-color: #000;
-	color: #fff;
-	width: 25px;
-	height: 25px;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 5%;
-}
-
-#contador-productos {
-	font-size: 12px;
-}
-
-.container-cart-products {
-	position: absolute;
-	top: 50px;
-	right: 0;
-
-	background-color: #fff;
-	width: 400px;
-	z-index: 1;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
-	border-radius: 10px;
-
-}
-
-.cart-product {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 30px;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.20);
-
-}
-
-.info-cart-product {
-	display: flex;
-	justify-content: space-between;
-	flex: 0.8;
-}
-
-.titulo-producto-carrito {
-	font-size: 20px;
-}
-
-.precio-producto-carrito {
-	font-weight: 700;
-	font-size: 20px;
-	margin-left: 10px;
-}
-
-.cantidad-producto-carrito {
-	font-weight: 400;
-	font-size: 20px;
-}
-
-.icon-close {
-	width: 25px;
-	height: 25px;
-}
-
-.icon-close:hover {
-	stroke: red;
-	cursor: pointer;
-}
-
-.cart-total {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 20px 0;
-	gap: 20px;
-}
-
-.cart-total h3 {
-	font-size: 20px;
-	font-weight: 700;
-}
-
-.total-pagar {
-	font-size: 20px;
-	font-weight: 900;
-}
-
-.hidden-cart {
-	display: none;
-}
 
 /* Electrodomésticos */
 .container-items {
@@ -330,55 +226,6 @@ footer {
 	cursor: pointer;
 }
 
-/* Login */
-.login__form {
-	background-color: #24252a;
-	color: #edf0f1;
-	padding: 50px 0;
-	font-family: "Montserrat", sans-serif;
-
-}
-
-.container__login {
-	max-width: 1200px;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
-}
-
-.login__form label {
-	display: block;
-	margin-bottom: 10px;
-}
-
-.login__form input[type="text"],
-.login__form input[type="password"] {
-	width: 100%;
-	padding: 10px;
-	border-radius: 5px;
-	border: none;
-	margin-bottom: 20px;
-}
-
-.login__form button[type="submit"] {
-	background-color: #00c4cc;
-	font-family: "Montserrat", sans-serif;
-	font-size: 14px;
-	color: #edf0f1;
-	padding: 10px 20px;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-}
-
-.login__form button[type="submit"]:hover {
-	background-color: #edf0f1;
-	color: #00c4cc;
-}
 
 h2 {
 	text-align: center;
