--- a/ProyectoFinal/src/main/resources/templates/admin/formulario-categoria.html
+++ b/ProyectoFinal/src/main/resources/templates/admin/formulario-categoria.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Formulario Categoría</title>
+	<meta charset="utf-8">
+	<title>formulario categoría</title>
 	<link rel="stylesheet" href="../static/css/estilos.css" th:href="@{/css/estilos.css}">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=montserrat:500&display=swap" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
-		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
+		integrity="sha384-sci3dtbijuqt6awl++zh7ql8zdkahpxu43ddt9syozimtq9eyrhkg3b7kml6ao19"
 		crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js"
-		integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
+		integrity="sha384-7ox8q2yzo/uwircfojvucqozl+zzbg2d2j5nkplqzh1hy0c1dhltkibprz/lg23c"
 		crossorigin="anonymous"></script>
 	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -27,48 +27,49 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
+					<li th:each="categoria : ${categorias}"><a href="#" th:href="@{/?(idCategoria=${categoria.id})}"
+							th:text="${categoria.nombre}">categoría</a></li>
+
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="">Categoría</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"></a>
-					</li>
+						<a class="nav-link active" aria-current="page" href="#"></a>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">Opciones
-						</a>
+							aria-expanded="false">Opciones</a>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="/admin/categoria/"
-									th:href="@{/admin/categoria}">Gestionar categoría</a></li>
-							<li><a class="dropdown-item" href="/admin/producto/" th:href="@{/admin/producto}">Gestionar
-									producto</a></li>
+							<li><a class="dropdown-item" href="admin/categoria/" th:href="@{/admin/categoria/}">Gestión
+									categorías</a></li>
+							<li><a class="dropdown-item" href="admin/producto/" th:href="@{/admin/producto/}">Gestión
+									productos</a></li>
 						</ul>
+					</li>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 
-	<form th:action="@{/admin/categoria/nueva/submit}" th:object="${categoria}" method="post">
-		<h1>
-			<span th:text="${categoria.id} ? 'Editar' : 'Nueva'"></span> categoría
-		</h1>
-		<div class="mb-4">
-			<label for="nombre" class="form-label">Nombre</label>
-			<input type="text" class="form-control" name="nombre" id="nombre" th:field="*{nombre}">
+	<div class="container">
+		<div class="row">
+			<form th:action="@{/admin/categoria/nueva/submit}" th:object="${categoria}" method="post">
+				<h2>
+					<span th:text="${categoria.id} ? 'Editar' : 'Nueva'"></span> categoría
+				</h2>
+				<div class="mb-4">
+					<label for="nombre" class="form-label">Nombre</label>
+					<input type="text" class="form-control" name="nombre" id="nombre" th:field="*{nombre}">
+				</div>
+				<div class="mb-4">
+					<label for="imagen" class="form-label">URL imagen:</label>
+					<input type="url" class="form-control" name="imagen" id="imagen" th:field="*{imagen}">
+				</div>
+				<button type="submit" name="submit" class="btn btn-primary">Enviar</button>
+			</form>
 		</div>
-		<div class="mb-4">
-			<label for="imagen" class="form-label">URL imagen:</label>
-			<input type="url" class="form-control" name="imagen" id="imagen" th:field="*{imagen}">
-		</div>
-		<button type="submit" name="submit" class="btn btn-primary">Enviar</button>
-	</form>
+	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 
 </body>
 
