--- a/ProyectoFinal/src/main/resources/templates/admin/formulario-producto.html
+++ b/ProyectoFinal/src/main/resources/templates/admin/formulario-producto.html
@@ -13,16 +13,12 @@
 		integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
 		crossorigin="anonymous"></script>
 	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<header>
-	<a class="footer__logo" href="index.html"><img src="../../static/img/ALKACEN.png" width="130px" alt="logo"></a>
-	<a class="cta" href="#">Iniciar Sesion</a>
-</header>
 
 <body>
-	<header th:replace="~{fragmentos/encabezado::encabezado}"></header>
-
 	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"></a>
@@ -32,71 +28,74 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
+					<li th:each="categoria : ${categorias}"><a href="#" th:href="@{/?(idCategoria=${categoria.id})}"
+							th:text="${categoria.nombre}">categoría</a></li>
+
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="">Categoría</a>
-					</li>
+						<a class="nav-link active" aria-current="page" href="#"></a>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">Opciones
-						</a>
+							aria-expanded="false">Opciones</a>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="/admin/categoria/"
-									th:href="@{/admin/categoria}">Gestionar categoría</a></li>
-							<li><a class="dropdown-item" href="/admin/producto/" th:href="@{/admin/producto}">Gestionar
-									producto</a></li>
+							<li><a class="dropdown-item" href="admin/categoria/"
+									th:href="@{/admin/categoria/}">Gestión categorías</a></li>
+							<li><a class="dropdown-item" href="admin/prodcutos/"
+									th:href="@{/admin/producto/}">Gestión productos</a></li>
 						</ul>
+					</li>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 
-	<form class="login__form" action="" method="post">
-		<div class="container__login">
-			<form method="post" action="#" th:action="@{/admin/producto/nuevo/submit}" th:object="${producto}">
-				<h1>
-					<span th:text="${producto.id} ? 'Editar' : 'Nuevo'"></span>
-					producto
-				</h1>
-				<input type="hidden" th:field="*{id}" id="id" />
-				<div class="login__form-group">
-					<label for="username">Nombre:</label>
-					<input type="text" id="nombre" placeholder="Nombre" th:field="*{nombre}" required>
-				</div>
-				<div class="login__form-group">
-					<label for="username">Descripción:</label>
-					<input type="url" id="imagen" placeholder="http://..." th:field="*{imgen}">
+	<div class="container">
+		<div class="row">
+			<form th:action="@{/admin/producto/nuevo/submit}" th:object="${producto}" method="post">
+				<h2>
+					<span th:text="${producto.id} ? 'Editar' : 'Nuevo'"></span> producto
+				</h2>
 
-				</div>
-				<div class="login__form-group">
-					<label for="number">Precio:</label>
-					<input type="text" id="pvp" placeholder="1.0" th:field="*{pvp}">
-				</div>
-				<div class="login__form-group">
-					<label for="username">Descuento:</label>
-					<input type="number" min="0" max="1" step="0.01" id="descuento" placeholder="0.0"
-						th:field="*{descuento}">
-				</div>
-				<div class="footer__form-group">
-					<label for="password">URL imagen:</label>
-					<input type="password" id="last-name" name="last-name" required>
+
+				<div class="mb-4">
+					<label for="nombre" class="form-label">Nombre:</label>
+					<input type="text" class="form-control" name="nombre" id="nombre" th:field="*{nombre}">
 				</div>
 
-				<div class="form-group">
-					<label for="categoria">Categoría</label> <select th:field="*{categoria}" class="form-control">
+				<div class="mb-4">
+					<label for="descripcion" class="form-label">Descripción:</label>
+					<input type="text" class="form-control" name="descripcion" id="descripcion" th:field="*{descripcion}">
+				</div>
+
+				<div class="mb-4">
+					<label for="number" class="form-label">Precio:</label>
+					<input type="text" class="form-control" name="pvp" id="pvp" th:field="*{pvp}">
+				</div>
+
+				<div class="mb-4">
+					<label for="descuento" class="form-label" >Descuento:</label>
+					<input type="number" class="form-control" min="0" max="1" step="0.01" id="descuento" th:field="*{descuento}">
+				</div>
+
+				<div class="mb-4">
+					<label for="imagen" class="form-label">URL imagen:</label>
+					<input type="url" class="form-control" id="imagen" name="imagen" th:field="*{imagen}">
+				</div>
+
+				<div class="mb-4">
+					<label for="categoria" class="form-label">Categoría</label> 
+					<select th:field="*{categoria}" class="form-control">
 						<option value="-1">---</option>
 						<option th:each="categoria : ${categorias}" th:value="${categoria.id}"
 							th:text="${categoria.nombre}">Categoría</option>
 					</select>
 				</div>
 
+				<button type="submit" name="submit" class="btn btn-primary">Enviar</button>
 
-				<div class="login__form-group">
-					<button type="submit">Guardar</button>
-				</div>
 			</form>
 		</div>
-	</form>
+	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
