--- a/ProyectoFinal/src/main/resources/templates/admin/listado-categoria.html
+++ b/ProyectoFinal/src/main/resources/templates/admin/listado-categoria.html
@@ -30,25 +30,21 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
+					<li th:each="categoria : ${categorias}"><a href="#" th:href="@{/?(idCategoria=${categoria.id})}"
+							th:text="${categoria.nombre}">categoría</a></li>
+
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="">Categoría</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"></a>
-					</li>
+						<a class="nav-link active" aria-current="page" href="#"></a>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">Opciones
-						</a>
+							aria-expanded="false">Opciones</a>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="/admin/categoria/"
-									th:href="@{/admin/categoria}">Gestionar categoría</a></li>
-							<li><a class="dropdown-item" href="/admin/producto/" th:href="@{/admin/producto}">Gestionar
-									producto</a></li>
+							<li><a class="dropdown-item" href="admin/listado-categoria.html"
+									th:href="@{/admin/categoria/}">Gestión categorías</a></li>
+							<li><a class="dropdown-item" href="admin/listado-producto.html"
+									th:href="@{/admin/producto/}">Gestión productos</a></li>
 						</ul>
+					</li>
 					</li>
 				</ul>
 			</div>
@@ -64,28 +60,28 @@
 					</button>
 					<span>¡No se puede borrar una categoría que tiene asociados productos!</span>
 				</div>
+
 				<div class="pull-right">
 					<a href="formulario-categoria.html" th:href="@{/admin/categoria/nueva/}"
-						class="btn btn-primary">Nueva
-						categoría</a>
-
+						class="btn btn-primary">Nueva categoría</a>
 				</div>
 				<table class="table">
 					<thead>
 						<tr>
-							<th>Imagen</th>
-							<th>Nombre</th>
-							<th>Operaciones</th>
+							<th scope="col">Imagen</th>
+							<th scope="col">Nombre</th>
+							<th scope="col">Operaciones</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr th:each="categoria : ${categorias}">
 							<td><img th:src="${not (#strings.isEmpty(categoria.imagen))} ? ${categoria.imagen} : 'http://placehold.it/48x48'"
-							class="img-responsive icono-categoria" alt="imagen" /></td>
+									class="img-responsive icono-categoria" alt="imagen" /></td>
 							<td th:text="${categoria.nombre}"></td>
-							<td class="operaciones"><a href="#" th:href="@{/admin/categoria/editar/{id}(id=${categoria.id})}"
-									class="btn btn-primary">Editar</a>
-								<button type="button" class="btn btn-danger" data-toggle="modal"
+							<td class="operaciones"><a href="#"
+									th:href="@{/admin/categoria/editar/{id}(id=${categoria.id})}"
+									class="btn btn-dark">Editar</a>
+								<button type="button" class="btn btn-dark" data-toggle="modal"
 									data-target="#delete-modal" th:data-id="${categoria.id}">Borrar</button>
 							</td>
 						</tr>
