--- a/ProyectoFinal/src/main/resources/templates/fragmentos/footer.html
+++ b/ProyectoFinal/src/main/resources/templates/fragmentos/footer.html
@@ -21,7 +21,7 @@
 
 <body>
 	<footer th:fragment="footer">
-		<div class="container">
+		<div class="container_footer">
 			<div class="footer__logo">
 				<img src="img/ALKACEN.png" alt="logo" width="150px">
 			</div>
