--- a/ProyectoFinal/src/main/resources/templates/index.html
+++ b/ProyectoFinal/src/main/resources/templates/index.html
@@ -33,28 +33,27 @@
 
 	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Categoría:</a>
+			<a class="navbar-brand" href="#"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
 				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
-					<ul class="navbar-nav">
-						<li th:each="categoria : ${categorias}"><a href="#" th:href="@{/?(idCategoria=${categoria.id})}"
-								th:text="${categoria.nombre}">categoría</a></li>
-					</ul>
+					<li th:each="categoria : ${categorias}"><a href="#" th:href="@{/?(idCategoria=${categoria.id})}"
+							th:text="${categoria.nombre}">categoría</a></li>
 					<li class="nav-item">
 						<a class="nav-link active" aria-current="page" href="#"></a>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
 							aria-expanded="false">Opciones</a>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="admin/listado-categoria.html"
-									th:href="@{/admin/categoria/}">Gestión categorías</a></li>
-							<li><a class="dropdown-item" href="admin/listado-productos.html"
-									th:href="@{/admin/producto/}">Gestión productos</a></li>
+							<li><a class="dropdown-item" href="admin/categoria/" th:href="@{/admin/categoria/}">Gestión
+									categorías</a></li>
+							<li><a class="dropdown-item" href="admin/producto/" th:href="@{/admin/producto/}">Gestión
+									productos</a></li>
 						</ul>
+					</li>
 					</li>
 				</ul>
 			</div>
