--- a/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
+++ b/ProyectoFinal/src/main/resources/templates/fragmentos/encabezado.html
@@ -29,7 +29,7 @@
 				<li><a th:href="@{/nosotros}">Nosotros</a></li>
 			</ul>
 		</nav>
-		<a class="cta" href="formulario-login.html" th:href="@{/formulario-login}" >Iniciar Sesion</a>
+		<a class="cta" th:href="@{/login}" >Iniciar Sesion</a>
 		<p class="menu cta">Menu</p>
 	</header>
 	<div class="overlay">
