--- a/ProyectoFinal/src/main/resources/templates/index.html
+++ b/ProyectoFinal/src/main/resources/templates/index.html
@@ -53,12 +53,16 @@
 		</div>
 	</nav>
 
+	<video width="100%" height="900px" autoplay muted loop>
+		<source src="../video/video.mp4" type="video/mp4">
+	</video>
+
 	<div class="slider-frame">
 		<ul>
-			<li><img src="../static/img/lg.png" alt=""></li>
-			<li><img src="../static/img/lavadoralg.png" alt=""></li>
-			<li><img src="../static/img/samsung.png" alt=""></li>
-			<li><img src="../static/img/lavavajWhirl.png" alt=""></li>
+			<li><img src="../img/lg.png" alt="carrusel"></li>
+			<li><img src="../img/lavadoralg.png" alt="carrusel"></li>
+			<li><img src="../img/samsung.png" alt="carrusel"></li>
+			<li><img src="../img/lavavajWhirl.png" alt="carrusel"></li>
 		</ul>
 	</div>
 
@@ -66,7 +70,7 @@
 		<div class="row g-3">
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/planrenove.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/planrenove.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Plan renove</h5>
 						<p class="card-text">Hasta 150€ por tu electrodoméstico antiguo.</p>
@@ -76,7 +80,7 @@
 
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/recogida.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/recogida.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Recogida</h5>
 						<p class="card-text">Recogida del electrodoméstico antiguo totalmente gratis</p>
@@ -86,7 +90,7 @@
 
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/energetica.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/energetica.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Consumo energético</h5>
 						<p class="card-text">Esta tabla de guiará a la hora de escoger.</p>
@@ -96,7 +100,7 @@
 
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/lavadoraBosch.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/lavadoraBosch.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Lavadoras WIFI</h5>
 						<p class="card-text">Lavadora Wifi, conectiva o inteligente.
@@ -107,7 +111,7 @@
 
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/hornos.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/hornos.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Hornos pirolíticos</h5>
 						<p class="card-text">Hornos que se limpian solos ya disponible en varios modelos.
@@ -118,17 +122,18 @@
 
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/vitrosEx.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/vitrosEx.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Vitros Extractoras</h5>
-						<p class="card-text">Llegan las vitros extractoras con un consumo energetico muy bajo.¡No compres campana!</p>
+						<p class="card-text">Llegan las vitros extractoras con un consumo energetico muy bajo.¡No
+							compres campana!</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/diasPrueba.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/diasPrueba.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">30 días de prueba</h5>
 						<p class="card-text">Llevate le producto y pruebalo hasta 30 días</p>
@@ -138,7 +143,7 @@
 
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/horas.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/horas.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Atención al cliente</h5>
 						<p class="card-text">Servicio de atención al cliente 24 horas al día</p>
@@ -148,7 +153,7 @@
 
 			<div class="col-4">
 				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="../static/img/istalacion.png" alt="Card image cap">
+					<img class="card-img-top" src="../img/istalacion.png" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Instalación disponible</h5>
 						<p class="card-text">Instalacion del producto si el cliente lo desea.</p>
