--- a/ProyectoFinal/src/main/resources/templates/login.html
+++ b/ProyectoFinal/src/main/resources/templates/login.html
@@ -2,65 +2,56 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="../static/css/estilos.css">
+	<meta charset="UTF-8">
+	<title>Login</title>
+	<link rel="stylesheet" href="../static/css/estilos.css" th:href="@{/css/estilos.css}">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js"
+		integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
+		crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js"
+		integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
+		crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<header>
-  <a class="footer__logo" href="index.html"><img src="img/ALKACEN.png" width="130px" alt="logo"></a>
-  <a class="cta" href="#">Iniciar Sesion</a>
-</header>
 
 <body>
+	<header th:replace="~{fragmentos/encabezado::encabezado}"></header>
 
-  <form class="login__form" action="" method="post">
-    <div class="container__login">
-      <div class="login__form-group">
-        <label for="username">Usuario:</label>
-        <input type="text" id="first-name" name="first-name" required>
-      </div>
-      <div class="footer__form-group">
-        <label for="password">Contraseña:</label>
-        <input type="password" id="last-name" name="last-name" required>
-      </div>
-      <div class="login__form-group">
-        <button type="submit">Iniciar Sesión</button><br><br><br><br><br><br><br><br><br><br><br><br>
-      </div>
-    </div>
-  </form>
+	<section class="vh-100 bg-dark">
+		<div class="container-fluid h-custom">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col-md-9 col-lg-6 col-xl-5">
+					<img src="../img/ALKACEN.png" th:scr="@{/img/ALKACEN}" class="img-fluid" alt="Sample image">
+				</div>
+				<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+					<form>
+						<div class="form-outline mb-4">
+							<input type="username" id="username" class="form-control form-control-lg"
+								placeholder="Enter a valid Username" />
+							<label class="form-label" for="form3Example3">Username</label>
+						</div>
 
-  <footer>
-    <div class="container">
-      <div class="footer__logo">
-        <img src="../static/img/ALKACEN.png alt="logo" width="150px">
-      </div>
-      <div class="footer__links">
-        <h3>Enlaces</h3><br>
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="electrodomesticos.html">Electrodomésticos</a></li>
-          <li><a href="tecnicos.html">Técnicos</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
-        </ul>
-      </div>
-      <div class="footer__contact">
-        <h3>Contacto</h3><br>
-        <ul>
-          <li><i class="fas fa-map-marker-alt"></i> Dirección: Calle 1234, Ciudad, País</li>
-          <li><i class="fas fa-envelope"></i> Email: info@alkacen.com</li>
-          <li><i class="fas fa-phone"></i> Teléfono: +1 234 567 8901</li>
-        </ul>
-      </div>
-      <div class="footer__social">
-        <h3>Síguenos</h3><br>
-        <ul>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-        </ul>
-      </div>
-    </div>
-  </footer>
+						<div class="form-outline mb-3">
+							<input type="password" id="form3Example4" class="form-control form-control-lg"
+								placeholder="Enter password" />
+							<label class="form-label" for="form3Example4">Password</label>
+						</div>
+
+						<div class="text-center text-lg-start mt-4 pt-2">
+							<button type="button" class="btn btn-primary btn-lg"
+								style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+						</div>
+
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer th:replace="~{fragmentos/footer::footer}"></footer>
+
 
 </body>
 
